- Set 5.6 as minimal PHP version
- Possibility to only expose "webroot" directory
- Type free search fields (thanks to Guillaume R.)
- Improve fields acces control adding new roles (thanks to Guillaume R.)
- Merge admintools plugins features
- Free search on statuses labels
- Better management of fields in free advanced search (thanks to Guillaume R.)
- Send telemetry data and register on website

Bugfixes
^^^^^^^^

- Better handle PDF errors
- Add version number to sessions
- iMissing translation in emails headers
- Duplicate members in list when searching on a group
- Bug in cotisation end date on some cases
- Parent group dropped when child edited from a group manager account
- Drop parent field from fields configuration
- Error sending remaining emails

Under the hood
^^^^^^^^^^^^^^

- Update third party libraries
- Use Slim Framework to manage routing
- Use Composer dependency management to handle third party libraries
- Use PSR2 for coding standards (with comments from PEAR)

0.8.3.3 -> 0.8.3.4

- Fix member card PDF url
- Send images with a one character name
- Fix mailings storage

0.8.3.2 -> 0.8.3.3

- Fix member storage
- Drop extension no longer required

0.8.3.1 -> 0.8.3.2

- Fix minor regression introduced in cd8da6

0.8.3 -> 0.8.3.1

- Fix MySQL 5.7 strict mode issues
- Fix PDF address

0.8.2.3 -> 0.8.3

Bugfixes
^^^^^^^^

- Improvements on groups management
- Fix issues on hidden fields
- Minor display issues
- Fix data types mismatches
- Do not create contributions adding a due free member
- Do not display exempted members that are no longer active on public pages
- Fix required flags on some fields
- Automatically load parent when required even if it has not been configured
- Fix an issue regarding to default MySQL values on some windows configurations

News
^^^^

- Add ASSO_ADDRESS_MULTI pattern on PDF models
- Add patterns for dynamic fields on PDF models